@@ -38,6 +38,9 @@ http://sourceforge.net/tracker/index.php?func=detail&aid=<id>&group_id=5470&atid
   strings -- but this has to be done, the previous pickling scheme broke
   anyway.
 
+- complex() could segfault on numeric types with NULL for float conversion.
+  Fixed.
+
 
 What's New in Python 2.0?
 =========================
